# activity-calendar-backend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
db/: schema.sql
src/db/: schema.sql
src/scripts/: import.py  json-import.py
