[tool.poetry]
name = "activity-calendar-app-backend"
version = "0.1.0"
description = ""
authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycodestyle = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
