[tool.poetry]
name = "activity-calendar-app-backend"
version = "0.0.0"
description = ""
authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.15"
pg8000 = "^1.14.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
