[tool.poetry]
name = "activity-calendar-app-backend"
version = "0.0.0"
description = ""
authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pg8000 = "^1.23.0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
